<?xml version="1.0" encoding="UTF-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary"
    tools:context=".EditeProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="4dp"
        android:paddingTop="16dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image"
                android:layout_width="100dp"

                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="0dp">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/perfilyo"
                    tools:ignore="ImageContrastCheck" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/my_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"

                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"
                android:layout_toEndOf="@+id/profile_image"

                android:text="@string/nicolas"
                android:textAllCaps="false"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/level"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/my_name"

                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"

                android:layout_toEndOf="@+id/profile_image"

                android:text="@string/ocupacion"
                android:textAllCaps="false"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/settings"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="46dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"></com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/statement"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"></com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mayor_statement"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="40dp"
                android:layout_height="30dp"


                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="46dp"


                 />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/refferal"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statement"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                ></com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_refferal"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statement"

                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="0dp"


                android:layout_toEndOf="@+id/statement"
                android:text="@string/datos"
                android:textColor="@color/teal_700"
                android:textSize="22sp" />

            <!-- FAQS-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/faqs"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/refferal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                ></com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_faqs"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/refferal"

                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/teal_700"


                android:layout_marginEnd="0dp"
                android:layout_toEndOf="@+id/faqs"
                android:text="@string/datos"
                android:textSize="22sp" />


            <!-- OUR HANDBOOK-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/handbook"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/faqs"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                ></com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_handbook"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/faqs"

                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/teal_700"


                android:layout_marginEnd="0dp"
                android:layout_toEndOf="@+id/faqs"
                android:text="@string/datos"
                android:textSize="22sp" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/community"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/handbook"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                ></com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_community"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/handbook"

                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="0dp"


                android:text="@string/datos"

                android:textColor="@color/teal_700"
                android:textSize="22sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFeel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/text_community"
                android:layout_alignStart="@+id/community"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"

                android:backgroundTint="@color/teal_200"

                android:text="@string/registrar"
                android:textColor="@color/design_default_color_surface"
                android:textSize="10dp"
                app:cornerRadius="10dp"

                app:strokeColor="@color/purple_200"

                >

            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>